fix alignment of graph lines

--- a/example/static/style-django_style.css
+++ b/example/static/style-django_style.css
@@ -139,10 +139,12 @@ ul#nodebgs li, ul#graphnodes li {
 
 ul#nodebgs {
 	list-style: none inside none !important;
+	padding: 0;
 }
 
 ul#graphnodes li, ul#nodebgs li {
 	height: 39px;
+	padding: 0;
 }
 
 ul#graphnodes li .info {
